--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,44 +5,44 @@
     <uses-permission android:name="android.permission.READ_PHONE_NUMBERS" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.READ_SMS" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
 
 
     <application
         android:allowBackup="true"
-        android:networkSecurityConfig="@xml/network_security_config"
-
-
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+        android:networkSecurityConfig="@xml/network_security_config"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.ProJob"
         tools:targetApi="31">
         <activity
-            android:name=".register.LogIn"
+            android:name=".dashboard"
             android:exported="true"
-            >
+            android:label="@string/title_activity_dashboard"
+            android:theme="@style/Theme.ProJob.NoActionBar" >
         <intent-filter>
             <action android:name="android.intent.action.MAIN" />
 
             <category android:name="android.intent.category.LAUNCHER" />
-        </intent-filter>
+        </intent-filter></activity>
+        <activity
+            android:name=".register.LogIn"
+            android:exported="true">
+
         </activity>
         <activity
             android:name=".register.RegisterPassword"
             android:exported="false" />
         <activity
             android:name=".register.RegisterOtp"
-            android:exported="true" >
-
-        </activity>
+            android:exported="true"></activity>
         <activity
             android:name=".MainActivity"
-            android:exported="true">
-
-        </activity>
+            android:exported="true"></activity>
     </application>
 
 </manifest>
